objects/blng__InvoiceRun__c.object
<CustomObject>
    <description>Stores the details of how many Invoices generated,how many Accounts processed &amp; Credit Notes generated.</description>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <externalId>true</externalId>
        <label>Apex Job Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__CleanUpStatus__c</fullName>
        <label>CleanUp Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CleanUpStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CompletedTime__c</fullName>
        <description>Invoice run completed  time</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Scheduler</label>
        <referenceTo>blng__InvoiceScheduler__c</referenceTo>
        <relationshipLabel>Invoice Runs</relationshipLabel>
        <relationshipName>InvoiceSchedulerInvoiceRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PercentageComplete__c</fullName>
        <label>Percentage Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__ProgressBar__c</fullName>
        <formula>IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_ProgressBarBorder.png&apos;, &apos;Progress Bar&apos;, 10, ( blng__PercentageComplete__c * 100 )) &amp;
IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_ProgressBarFilled.png&apos;, &apos;Progress Border&apos;, 10, (100 - blng__PercentageComplete__c * 100 )) &amp;
&apos; &apos; &amp;
TEXT (blng__PercentageComplete__c * 100) &amp;
&apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__StatusIndicator__c</fullName>
        <formula>IF (
        ISPICKVAL(blng__Status__c, &apos;Completed with Errors&apos;),
        IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_StatusRed.png&apos;, &apos;In Progress&apos;, 20, 20),
        IF (
            ISPICKVAL(blng__Status__c, &apos;Completed&apos;),
            IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_StatusGreen.png&apos;, &apos;In Progress&apos;, 20, 20),
            IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_StatusOrange.png&apos;, &apos;In Progress&apos;, 20, 20)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceRunStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <label>Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Invoice Run</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>blng__All_Invoice_Runs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoice Runs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Invoice Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>